Fixed bug in spotlight